# 01_text_preprocessing

./: .gitignore  PROJECT_OVERVIEW.md  README.md  UMC dimension.md  main.py  umc_classification_prompt.md
.claude/: CLAUDE.md
.claude/agents/: umc_classifier.md
.claude/worktrees/compassionate-williamson/: pyproject.toml
.claude/worktrees/compassionate-williamson/config/: keywords.yaml  seed_keywords.yaml
.claude/worktrees/compassionate-williamson/notebooks/: phase01_keyword_filtering.ipynb
.claude/worktrees/compassionate-williamson/src/: phase00_data_cleaning.py  phase02_split_by_gu.py  phase03_llm_analysis.py
.claude/worktrees/quizzical-fermi/: LLM_PIPELINE_MASTERPLAN.md  pyrightconfig.json
.claude/worktrees/quizzical-fermi/notebooks/: phase00_data_cleaning.ipynb  phase00_keyword_discovery.ipynb
config/: keywords.yaml  seed_keywords.yaml
notebooks/: phase00_data_cleaning.ipynb  phase02_split_by_gu.ipynb  phase03_llm_analysis.ipynb  phase0_keyword_discovery.ipynb  phase1_keyword_filtering.ipynb  pipeline.ipynb
scripts/: classify_batches.py  gen_responses.py
src/: filter_by_keyword.py  keyword_discovery.py  phase00_data_cleaning.py  phase00_keyword_discovery.py  phase00_sample_for_claude.py  phase01_keyword_filter.py  phase02_normalize.py  phase03_llm_analysis.py  pipeline.py  run_pipeline.py  sample_for_claude.py
tests/: test_pipeline.py
